# fastapi_production_template

./: .coveragerc  .env.example  .flake8  .gitignore  Dockerfile  Dockerfile.prod  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  justfile  logging.ini  logging_production.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: linters.yml
alembic/: env.py
alembic/versions/: 2023-01-05_auth.py  2024-04-29_rolepermission.py
gunicorn/: gunicorn_conf.py
requirements/: base.txt  dev.txt  prod.txt
scripts/: downgrade  format  makemigrations  migrate  start-dev.sh  start-prod.sh
scripts/postgres/: backup  restore
src/: config.py  constants.py  database.py  dictionary.py  exceptions.py  main.py  models.py  redis.py  schemas.py  utils.py
src/RolePermission/: dependencies.py  router.py  schemas.py  service.py
src/auth/: config.py  constants.py  db.py  dependencies.py  exceptions.py  jwt.py  models.py  router.py  schemas.py  security.py  service.py  utils.py
src/auth/RolePermission/: config.py  db.py  router.py  schemas.py  service.py
src/external_service/: client.py  router.py  schemas.py
tests/: conftest.py
tests/auth/: test_routes.py
